--- a/CLOCK_DOM/style.css
+++ b/CLOCK_DOM/style.css
@@ -2,18 +2,17 @@
    position: absolute;
    top: 50%;
    left: 50%;
-   transform: translate(-50%, -50%);
+
    border-radius: 50%;
    background-color: #fcca66;
 }
-
 
 .hand {
    position: absolute;
    top: 50%;
    left: 50%;
-   transform-origin: 20px center;
-   transform: translate(-20px, -50%) rotateZ(270deg);
+   transform-origin: 10px center;
+   transform: translate(-10px, -50%) rotateZ(270deg);
    background-color: #000;
    border-radius: 15px;
 }
@@ -30,32 +29,30 @@
 
 .secondHand {
    width: 44%;
-   height: 2px;
+   height: 1px;
 }
 
 .digit {
    position: absolute;
    transform: translate(-50%, -50%);
-   display: flex;
-   width: 15%;
-   height: 15%;
+   width: 30px;
+   height: 30px;
+   line-height: 30px;
    border-radius: 50%;
    font-size: 16px;
    text-align: center;
    background-color: #48b382;
-   align-items: center;
-   justify-content: center;
-
 }
 
-.time {
+.digitalWatch {
    position: absolute;
    top: 25%;
    width: 100%;
    height: 30px;
+   text-align: center;
    font-size: 16px;
    font-style: italic;
-   text-align: center;
+
 }
 
 .dot {
@@ -63,8 +60,8 @@
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   width: 5px;
-   height: 5px;
-   background-color: #48b382;
+   width: 4px;
+   height: 4px;
    border-radius: 50%;
+   background-color: #48b382;
 }
