--- a/CLOCK_DOM/style.css
+++ b/CLOCK_DOM/style.css
@@ -14,6 +14,7 @@
    transform: translate(-10px, -50%) rotateZ(270deg);
    background-color: #000;
    border-radius: 15px;
+   will-change: transform;
 }
 
 .hourHand {
